Fixed horizontal scroll

--- a/serve/styles.css
+++ b/serve/styles.css
@@ -117,3 +117,7 @@ img {
         transform: translateY(-100%);
     }
 }
+
+p {
+    display: inline-block;
+}
